--- a/style.css
+++ b/style.css
@@ -124,3 +124,9 @@ footer {
     padding: 20px;
     margin-top: 40px;
 }
+
+a {
+    color: inherit;
+    text-decoration: none;
+    font: 1em sans-serif;
+}
